src/test/ui/rfc-2126-extern-absolute-paths/non-existent-3.rs
// edition:2018

use ycrate; //~ ERROR can't find crate for `ycrate`

fn main() {}
